parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> sects
Rule 2     sects -> sect sects
Rule 3     sects -> sect
Rule 4     sect -> GLOBL LABEL filetag
Rule 5     sect -> INCLUDE STRING filetag
Rule 6     sect -> tSect
Rule 7     sect -> dSect
Rule 8     dSect -> DATA filetag declarations
Rule 9     tSect -> TEXT filetag instrs
Rule 10    filetag -> LINE_MARKER STRING NUMBER
Rule 11    label -> LABEL COLON
Rule 12    instrs -> label instr filetag instrs
Rule 13    instrs -> label instr filetag
Rule 14    instrs -> instr filetag
Rule 15    instrs -> instr filetag instrs
Rule 16    instr -> breakpoint
Rule 17    instr -> nop
Rule 18    instr -> label
Rule 19    instr -> move
Rule 20    instr -> iType
Rule 21    instr -> jType
Rule 22    instr -> syscall
Rule 23    instr -> rType
Rule 24    instr -> branch
Rule 25    iType -> LOADS_R REG LABEL
Rule 26    iType -> PS_LOADS_A REG LABEL
Rule 27    iType -> PS_LOADS_I REG CHAR
Rule 28    iType -> PS_LOADS_I REG NUMBER
Rule 29    iType -> PS_I_TYPE REG REG CHAR
Rule 30    iType -> PS_I_TYPE REG REG NUMBER
Rule 31    iType -> LOADS_R REG LPAREN REG RPAREN
Rule 32    iType -> LOADS_R REG NUMBER LPAREN REG RPAREN
Rule 33    iType -> LOADS_I REG CHAR
Rule 34    iType -> LOADS_I REG NUMBER
Rule 35    iType -> I_TYPE REG REG CHAR
Rule 36    iType -> I_TYPE REG REG NUMBER
Rule 37    rType -> PS_R_FUNCT2 REG REG
Rule 38    rType -> PS_R_FUNCT3 REG REG REG
Rule 39    rType -> R_FUNCT2 REG REG
Rule 40    rType -> R_FUNCT3 REG REG REG
Rule 41    jType -> J_FUNCTR REG
Rule 42    jType -> J_FUNCT LABEL
Rule 43    move -> MOVE REG
Rule 44    branch -> PS_ZERO_BRANCH REG LABEL
Rule 45    branch -> PS_BRANCH REG REG LABEL
Rule 46    branch -> ZERO_BRANCH REG LABEL
Rule 47    branch -> BRANCH REG REG LABEL
Rule 48    syscall -> SYSCALL
Rule 49    nop -> NOP
Rule 50    breakpoint -> BREAK NUMBER
Rule 51    breakpoint -> BREAK
Rule 52    declarations -> declaration filetag
Rule 53    declarations -> declaration filetag declarations
Rule 54    declaration -> ALIGN NUMBER
Rule 55    declaration -> EQV
Rule 56    declaration -> HALF nums
Rule 57    declaration -> SPACE nums
Rule 58    declaration -> ASCII STRING
Rule 59    declaration -> BYTE chars
Rule 60    declaration -> WORD nums
Rule 61    declaration -> ASCIIZ STRING
Rule 62    declaration -> label HALF nums
Rule 63    declaration -> label SPACE nums
Rule 64    declaration -> label ASCII STRING
Rule 65    declaration -> label BYTE chars
Rule 66    declaration -> label WORD nums
Rule 67    declaration -> label ASCIIZ STRING
Rule 68    nums -> NUMBER nums
Rule 69    nums -> NUMBER COMMA nums
Rule 70    nums -> NUMBER
Rule 71    chars -> NUMBER chars
Rule 72    chars -> NUMBER COMMA chars
Rule 73    chars -> NUMBER
Rule 74    chars -> CHAR chars
Rule 75    chars -> CHAR COMMA chars
Rule 76    chars -> CHAR

Terminals, with rules where they appear:

ALIGN                : 54
ASCII                : 58 64
ASCIIZ               : 61 67
BRANCH               : 47
BREAK                : 50 51
BYTE                 : 59 65
CHAR                 : 27 29 33 35 74 75 76
COLON                : 11
COMMA                : 69 72 75
DATA                 : 8
EQV                  : 55
GLOBL                : 4
HALF                 : 56 62
INCLUDE              : 5
I_TYPE               : 35 36
J_FUNCT              : 42
J_FUNCTR             : 41
LABEL                : 4 11 25 26 42 44 45 46 47
LINE_MARKER          : 10
LOADS_I              : 33 34
LOADS_R              : 25 31 32
LPAREN               : 31 32
MOVE                 : 43
NOP                  : 49
NUMBER               : 10 28 30 32 34 36 50 54 68 69 70 71 72 73
PS_BRANCH            : 45
PS_I_TYPE            : 29 30
PS_LOADS_A           : 26
PS_LOADS_I           : 27 28
PS_R_FUNCT2          : 37
PS_R_FUNCT3          : 38
PS_ZERO_BRANCH       : 44
REG                  : 25 26 27 28 29 29 30 30 31 31 32 32 33 34 35 35 36 36 37 37 38 38 38 39 39 40 40 40 41 43 44 45 45 46 47 47
RPAREN               : 31 32
R_FUNCT2             : 39
R_FUNCT3             : 40
SPACE                : 57 63
STRING               : 5 10 58 61 64 67
SYSCALL              : 48
TEXT                 : 9
WORD                 : 60 66
ZERO_BRANCH          : 46
error                : 

Nonterminals, with rules where they appear:

branch               : 24
breakpoint           : 16
chars                : 59 65 71 72 74 75
dSect                : 7
declaration          : 52 53
declarations         : 8 53
filetag              : 4 5 8 9 12 13 14 15 52 53
iType                : 20
instr                : 12 13 14 15
instrs               : 9 12 15
jType                : 21
label                : 12 13 18 62 63 64 65 66 67
move                 : 19
nop                  : 17
nums                 : 56 57 60 62 63 66 68 69
program              : 0
rType                : 23
sect                 : 2 3
sects                : 1 2
syscall              : 22
tSect                : 6


state 0

    (0) S' -> . program
    (1) program -> . sects
    (2) sects -> . sect sects
    (3) sects -> . sect
    (4) sect -> . GLOBL LABEL filetag
    (5) sect -> . INCLUDE STRING filetag
    (6) sect -> . tSect
    (7) sect -> . dSect
    (9) tSect -> . TEXT filetag instrs
    (8) dSect -> . DATA filetag declarations
    GLOBL           shift and go to state 4
    INCLUDE         shift and go to state 5
    TEXT            shift and go to state 8
    DATA            shift and go to state 9

    program                        shift and go to state 1
    sects                          shift and go to state 2
    sect                           shift and go to state 3
    tSect                          shift and go to state 6
    dSect                          shift and go to state 7

state 1

    (0) S' -> program .


state 2

    (1) program -> sects .
    $end            reduce using rule 1 (program -> sects .)


state 3

    (2) sects -> sect . sects
    (3) sects -> sect .
    (2) sects -> . sect sects
    (3) sects -> . sect
    (4) sect -> . GLOBL LABEL filetag
    (5) sect -> . INCLUDE STRING filetag
    (6) sect -> . tSect
    (7) sect -> . dSect
    (9) tSect -> . TEXT filetag instrs
    (8) dSect -> . DATA filetag declarations
    $end            reduce using rule 3 (sects -> sect .)
    GLOBL           shift and go to state 4
    INCLUDE         shift and go to state 5
    TEXT            shift and go to state 8
    DATA            shift and go to state 9

    sect                           shift and go to state 3
    sects                          shift and go to state 10
    tSect                          shift and go to state 6
    dSect                          shift and go to state 7

state 4

    (4) sect -> GLOBL . LABEL filetag
    LABEL           shift and go to state 11


state 5

    (5) sect -> INCLUDE . STRING filetag
    STRING          shift and go to state 12


state 6

    (6) sect -> tSect .
    GLOBL           reduce using rule 6 (sect -> tSect .)
    INCLUDE         reduce using rule 6 (sect -> tSect .)
    TEXT            reduce using rule 6 (sect -> tSect .)
    DATA            reduce using rule 6 (sect -> tSect .)
    $end            reduce using rule 6 (sect -> tSect .)


state 7

    (7) sect -> dSect .
    GLOBL           reduce using rule 7 (sect -> dSect .)
    INCLUDE         reduce using rule 7 (sect -> dSect .)
    TEXT            reduce using rule 7 (sect -> dSect .)
    DATA            reduce using rule 7 (sect -> dSect .)
    $end            reduce using rule 7 (sect -> dSect .)


state 8

    (9) tSect -> TEXT . filetag instrs
    (10) filetag -> . LINE_MARKER STRING NUMBER
    LINE_MARKER     shift and go to state 14

    filetag                        shift and go to state 13

state 9

    (8) dSect -> DATA . filetag declarations
    (10) filetag -> . LINE_MARKER STRING NUMBER
    LINE_MARKER     shift and go to state 14

    filetag                        shift and go to state 15

state 10

    (2) sects -> sect sects .
    $end            reduce using rule 2 (sects -> sect sects .)


state 11

    (4) sect -> GLOBL LABEL . filetag
    (10) filetag -> . LINE_MARKER STRING NUMBER
    LINE_MARKER     shift and go to state 14

    filetag                        shift and go to state 16

state 12

    (5) sect -> INCLUDE STRING . filetag
    (10) filetag -> . LINE_MARKER STRING NUMBER
    LINE_MARKER     shift and go to state 14

    filetag                        shift and go to state 17

state 13

    (9) tSect -> TEXT filetag . instrs
    (12) instrs -> . label instr filetag instrs
    (13) instrs -> . label instr filetag
    (14) instrs -> . instr filetag
    (15) instrs -> . instr filetag instrs
    (11) label -> . LABEL COLON
    (16) instr -> . breakpoint
    (17) instr -> . nop
    (18) instr -> . label
    (19) instr -> . move
    (20) instr -> . iType
    (21) instr -> . jType
    (22) instr -> . syscall
    (23) instr -> . rType
    (24) instr -> . branch
    (50) breakpoint -> . BREAK NUMBER
    (51) breakpoint -> . BREAK
    (49) nop -> . NOP
    (43) move -> . MOVE REG
    (25) iType -> . LOADS_R REG LABEL
    (26) iType -> . PS_LOADS_A REG LABEL
    (27) iType -> . PS_LOADS_I REG CHAR
    (28) iType -> . PS_LOADS_I REG NUMBER
    (29) iType -> . PS_I_TYPE REG REG CHAR
    (30) iType -> . PS_I_TYPE REG REG NUMBER
    (31) iType -> . LOADS_R REG LPAREN REG RPAREN
    (32) iType -> . LOADS_R REG NUMBER LPAREN REG RPAREN
    (33) iType -> . LOADS_I REG CHAR
    (34) iType -> . LOADS_I REG NUMBER
    (35) iType -> . I_TYPE REG REG CHAR
    (36) iType -> . I_TYPE REG REG NUMBER
    (41) jType -> . J_FUNCTR REG
    (42) jType -> . J_FUNCT LABEL
    (48) syscall -> . SYSCALL
    (37) rType -> . PS_R_FUNCT2 REG REG
    (38) rType -> . PS_R_FUNCT3 REG REG REG
    (39) rType -> . R_FUNCT2 REG REG
    (40) rType -> . R_FUNCT3 REG REG REG
    (44) branch -> . PS_ZERO_BRANCH REG LABEL
    (45) branch -> . PS_BRANCH REG REG LABEL
    (46) branch -> . ZERO_BRANCH REG LABEL
    (47) branch -> . BRANCH REG REG LABEL
    LABEL           shift and go to state 21
    BREAK           shift and go to state 30
    NOP             shift and go to state 31
    MOVE            shift and go to state 32
    LOADS_R         shift and go to state 33
    PS_LOADS_A      shift and go to state 34
    PS_LOADS_I      shift and go to state 35
    PS_I_TYPE       shift and go to state 36
    LOADS_I         shift and go to state 37
    I_TYPE          shift and go to state 38
    J_FUNCTR        shift and go to state 39
    J_FUNCT         shift and go to state 40
    SYSCALL         shift and go to state 41
    PS_R_FUNCT2     shift and go to state 42
    PS_R_FUNCT3     shift and go to state 43
    R_FUNCT2        shift and go to state 44
    R_FUNCT3        shift and go to state 45
    PS_ZERO_BRANCH  shift and go to state 46
    PS_BRANCH       shift and go to state 47
    ZERO_BRANCH     shift and go to state 48
    BRANCH          shift and go to state 49

    instrs                         shift and go to state 18
    label                          shift and go to state 19
    instr                          shift and go to state 20
    breakpoint                     shift and go to state 22
    nop                            shift and go to state 23
    move                           shift and go to state 24
    iType                          shift and go to state 25
    jType                          shift and go to state 26
    syscall                        shift and go to state 27
    rType                          shift and go to state 28
    branch                         shift and go to state 29

state 14

    (10) filetag -> LINE_MARKER . STRING NUMBER
    STRING          shift and go to state 50


state 15

    (8) dSect -> DATA filetag . declarations
    (52) declarations -> . declaration filetag
    (53) declarations -> . declaration filetag declarations
    (54) declaration -> . ALIGN NUMBER
    (55) declaration -> . EQV
    (56) declaration -> . HALF nums
    (57) declaration -> . SPACE nums
    (58) declaration -> . ASCII STRING
    (59) declaration -> . BYTE chars
    (60) declaration -> . WORD nums
    (61) declaration -> . ASCIIZ STRING
    (62) declaration -> . label HALF nums
    (63) declaration -> . label SPACE nums
    (64) declaration -> . label ASCII STRING
    (65) declaration -> . label BYTE chars
    (66) declaration -> . label WORD nums
    (67) declaration -> . label ASCIIZ STRING
    (11) label -> . LABEL COLON
    ALIGN           shift and go to state 53
    EQV             shift and go to state 54
    HALF            shift and go to state 55
    SPACE           shift and go to state 56
    ASCII           shift and go to state 57
    BYTE            shift and go to state 58
    WORD            shift and go to state 59
    ASCIIZ          shift and go to state 60
    LABEL           shift and go to state 21

    declarations                   shift and go to state 51
    declaration                    shift and go to state 52
    label                          shift and go to state 61

state 16

    (4) sect -> GLOBL LABEL filetag .
    GLOBL           reduce using rule 4 (sect -> GLOBL LABEL filetag .)
    INCLUDE         reduce using rule 4 (sect -> GLOBL LABEL filetag .)
    TEXT            reduce using rule 4 (sect -> GLOBL LABEL filetag .)
    DATA            reduce using rule 4 (sect -> GLOBL LABEL filetag .)
    $end            reduce using rule 4 (sect -> GLOBL LABEL filetag .)


state 17

    (5) sect -> INCLUDE STRING filetag .
    GLOBL           reduce using rule 5 (sect -> INCLUDE STRING filetag .)
    INCLUDE         reduce using rule 5 (sect -> INCLUDE STRING filetag .)
    TEXT            reduce using rule 5 (sect -> INCLUDE STRING filetag .)
    DATA            reduce using rule 5 (sect -> INCLUDE STRING filetag .)
    $end            reduce using rule 5 (sect -> INCLUDE STRING filetag .)


state 18

    (9) tSect -> TEXT filetag instrs .
    GLOBL           reduce using rule 9 (tSect -> TEXT filetag instrs .)
    INCLUDE         reduce using rule 9 (tSect -> TEXT filetag instrs .)
    TEXT            reduce using rule 9 (tSect -> TEXT filetag instrs .)
    DATA            reduce using rule 9 (tSect -> TEXT filetag instrs .)
    $end            reduce using rule 9 (tSect -> TEXT filetag instrs .)


state 19

    (12) instrs -> label . instr filetag instrs
    (13) instrs -> label . instr filetag
    (18) instr -> label .
    (16) instr -> . breakpoint
    (17) instr -> . nop
    (18) instr -> . label
    (19) instr -> . move
    (20) instr -> . iType
    (21) instr -> . jType
    (22) instr -> . syscall
    (23) instr -> . rType
    (24) instr -> . branch
    (50) breakpoint -> . BREAK NUMBER
    (51) breakpoint -> . BREAK
    (49) nop -> . NOP
    (11) label -> . LABEL COLON
    (43) move -> . MOVE REG
    (25) iType -> . LOADS_R REG LABEL
    (26) iType -> . PS_LOADS_A REG LABEL
    (27) iType -> . PS_LOADS_I REG CHAR
    (28) iType -> . PS_LOADS_I REG NUMBER
    (29) iType -> . PS_I_TYPE REG REG CHAR
    (30) iType -> . PS_I_TYPE REG REG NUMBER
    (31) iType -> . LOADS_R REG LPAREN REG RPAREN
    (32) iType -> . LOADS_R REG NUMBER LPAREN REG RPAREN
    (33) iType -> . LOADS_I REG CHAR
    (34) iType -> . LOADS_I REG NUMBER
    (35) iType -> . I_TYPE REG REG CHAR
    (36) iType -> . I_TYPE REG REG NUMBER
    (41) jType -> . J_FUNCTR REG
    (42) jType -> . J_FUNCT LABEL
    (48) syscall -> . SYSCALL
    (37) rType -> . PS_R_FUNCT2 REG REG
    (38) rType -> . PS_R_FUNCT3 REG REG REG
    (39) rType -> . R_FUNCT2 REG REG
    (40) rType -> . R_FUNCT3 REG REG REG
    (44) branch -> . PS_ZERO_BRANCH REG LABEL
    (45) branch -> . PS_BRANCH REG REG LABEL
    (46) branch -> . ZERO_BRANCH REG LABEL
    (47) branch -> . BRANCH REG REG LABEL
    LINE_MARKER     reduce using rule 18 (instr -> label .)
    BREAK           shift and go to state 30
    NOP             shift and go to state 31
    LABEL           shift and go to state 21
    MOVE            shift and go to state 32
    LOADS_R         shift and go to state 33
    PS_LOADS_A      shift and go to state 34
    PS_LOADS_I      shift and go to state 35
    PS_I_TYPE       shift and go to state 36
    LOADS_I         shift and go to state 37
    I_TYPE          shift and go to state 38
    J_FUNCTR        shift and go to state 39
    J_FUNCT         shift and go to state 40
    SYSCALL         shift and go to state 41
    PS_R_FUNCT2     shift and go to state 42
    PS_R_FUNCT3     shift and go to state 43
    R_FUNCT2        shift and go to state 44
    R_FUNCT3        shift and go to state 45
    PS_ZERO_BRANCH  shift and go to state 46
    PS_BRANCH       shift and go to state 47
    ZERO_BRANCH     shift and go to state 48
    BRANCH          shift and go to state 49

    label                          shift and go to state 62
    instr                          shift and go to state 63
    breakpoint                     shift and go to state 22
    nop                            shift and go to state 23
    move                           shift and go to state 24
    iType                          shift and go to state 25
    jType                          shift and go to state 26
    syscall                        shift and go to state 27
    rType                          shift and go to state 28
    branch                         shift and go to state 29

state 20

    (14) instrs -> instr . filetag
    (15) instrs -> instr . filetag instrs
    (10) filetag -> . LINE_MARKER STRING NUMBER
    LINE_MARKER     shift and go to state 14

    filetag                        shift and go to state 64

state 21

    (11) label -> LABEL . COLON
    COLON           shift and go to state 65


state 22

    (16) instr -> breakpoint .
    LINE_MARKER     reduce using rule 16 (instr -> breakpoint .)


state 23

    (17) instr -> nop .
    LINE_MARKER     reduce using rule 17 (instr -> nop .)


state 24

    (19) instr -> move .
    LINE_MARKER     reduce using rule 19 (instr -> move .)


state 25

    (20) instr -> iType .
    LINE_MARKER     reduce using rule 20 (instr -> iType .)


state 26

    (21) instr -> jType .
    LINE_MARKER     reduce using rule 21 (instr -> jType .)


state 27

    (22) instr -> syscall .
    LINE_MARKER     reduce using rule 22 (instr -> syscall .)


state 28

    (23) instr -> rType .
    LINE_MARKER     reduce using rule 23 (instr -> rType .)


state 29

    (24) instr -> branch .
    LINE_MARKER     reduce using rule 24 (instr -> branch .)


state 30

    (50) breakpoint -> BREAK . NUMBER
    (51) breakpoint -> BREAK .
    NUMBER          shift and go to state 66
    LINE_MARKER     reduce using rule 51 (breakpoint -> BREAK .)


state 31

    (49) nop -> NOP .
    LINE_MARKER     reduce using rule 49 (nop -> NOP .)


state 32

    (43) move -> MOVE . REG
    REG             shift and go to state 67


state 33

    (25) iType -> LOADS_R . REG LABEL
    (31) iType -> LOADS_R . REG LPAREN REG RPAREN
    (32) iType -> LOADS_R . REG NUMBER LPAREN REG RPAREN
    REG             shift and go to state 68


state 34

    (26) iType -> PS_LOADS_A . REG LABEL
    REG             shift and go to state 69


state 35

    (27) iType -> PS_LOADS_I . REG CHAR
    (28) iType -> PS_LOADS_I . REG NUMBER
    REG             shift and go to state 70


state 36

    (29) iType -> PS_I_TYPE . REG REG CHAR
    (30) iType -> PS_I_TYPE . REG REG NUMBER
    REG             shift and go to state 71


state 37

    (33) iType -> LOADS_I . REG CHAR
    (34) iType -> LOADS_I . REG NUMBER
    REG             shift and go to state 72


state 38

    (35) iType -> I_TYPE . REG REG CHAR
    (36) iType -> I_TYPE . REG REG NUMBER
    REG             shift and go to state 73


state 39

    (41) jType -> J_FUNCTR . REG
    REG             shift and go to state 74


state 40

    (42) jType -> J_FUNCT . LABEL
    LABEL           shift and go to state 75


state 41

    (48) syscall -> SYSCALL .
    LINE_MARKER     reduce using rule 48 (syscall -> SYSCALL .)


state 42

    (37) rType -> PS_R_FUNCT2 . REG REG
    REG             shift and go to state 76


state 43

    (38) rType -> PS_R_FUNCT3 . REG REG REG
    REG             shift and go to state 77


state 44

    (39) rType -> R_FUNCT2 . REG REG
    REG             shift and go to state 78


state 45

    (40) rType -> R_FUNCT3 . REG REG REG
    REG             shift and go to state 79


state 46

    (44) branch -> PS_ZERO_BRANCH . REG LABEL
    REG             shift and go to state 80


state 47

    (45) branch -> PS_BRANCH . REG REG LABEL
    REG             shift and go to state 81


state 48

    (46) branch -> ZERO_BRANCH . REG LABEL
    REG             shift and go to state 82


state 49

    (47) branch -> BRANCH . REG REG LABEL
    REG             shift and go to state 83


state 50

    (10) filetag -> LINE_MARKER STRING . NUMBER
    NUMBER          shift and go to state 84


state 51

    (8) dSect -> DATA filetag declarations .
    GLOBL           reduce using rule 8 (dSect -> DATA filetag declarations .)
    INCLUDE         reduce using rule 8 (dSect -> DATA filetag declarations .)
    TEXT            reduce using rule 8 (dSect -> DATA filetag declarations .)
    DATA            reduce using rule 8 (dSect -> DATA filetag declarations .)
    $end            reduce using rule 8 (dSect -> DATA filetag declarations .)


state 52

    (52) declarations -> declaration . filetag
    (53) declarations -> declaration . filetag declarations
    (10) filetag -> . LINE_MARKER STRING NUMBER
    LINE_MARKER     shift and go to state 14

    filetag                        shift and go to state 85

state 53

    (54) declaration -> ALIGN . NUMBER
    NUMBER          shift and go to state 86


state 54

    (55) declaration -> EQV .
    LINE_MARKER     reduce using rule 55 (declaration -> EQV .)


state 55

    (56) declaration -> HALF . nums
    (68) nums -> . NUMBER nums
    (69) nums -> . NUMBER COMMA nums
    (70) nums -> . NUMBER
    NUMBER          shift and go to state 88

    nums                           shift and go to state 87

state 56

    (57) declaration -> SPACE . nums
    (68) nums -> . NUMBER nums
    (69) nums -> . NUMBER COMMA nums
    (70) nums -> . NUMBER
    NUMBER          shift and go to state 88

    nums                           shift and go to state 89

state 57

    (58) declaration -> ASCII . STRING
    STRING          shift and go to state 90


state 58

    (59) declaration -> BYTE . chars
    (71) chars -> . NUMBER chars
    (72) chars -> . NUMBER COMMA chars
    (73) chars -> . NUMBER
    (74) chars -> . CHAR chars
    (75) chars -> . CHAR COMMA chars
    (76) chars -> . CHAR
    NUMBER          shift and go to state 92
    CHAR            shift and go to state 93

    chars                          shift and go to state 91

state 59

    (60) declaration -> WORD . nums
    (68) nums -> . NUMBER nums
    (69) nums -> . NUMBER COMMA nums
    (70) nums -> . NUMBER
    NUMBER          shift and go to state 88

    nums                           shift and go to state 94

state 60

    (61) declaration -> ASCIIZ . STRING
    STRING          shift and go to state 95


state 61

    (62) declaration -> label . HALF nums
    (63) declaration -> label . SPACE nums
    (64) declaration -> label . ASCII STRING
    (65) declaration -> label . BYTE chars
    (66) declaration -> label . WORD nums
    (67) declaration -> label . ASCIIZ STRING
    HALF            shift and go to state 96
    SPACE           shift and go to state 97
    ASCII           shift and go to state 98
    BYTE            shift and go to state 99
    WORD            shift and go to state 100
    ASCIIZ          shift and go to state 101


state 62

    (18) instr -> label .
    LINE_MARKER     reduce using rule 18 (instr -> label .)


state 63

    (12) instrs -> label instr . filetag instrs
    (13) instrs -> label instr . filetag
    (10) filetag -> . LINE_MARKER STRING NUMBER
    LINE_MARKER     shift and go to state 14

    filetag                        shift and go to state 102

state 64

    (14) instrs -> instr filetag .
    (15) instrs -> instr filetag . instrs
    (12) instrs -> . label instr filetag instrs
    (13) instrs -> . label instr filetag
    (14) instrs -> . instr filetag
    (15) instrs -> . instr filetag instrs
    (11) label -> . LABEL COLON
    (16) instr -> . breakpoint
    (17) instr -> . nop
    (18) instr -> . label
    (19) instr -> . move
    (20) instr -> . iType
    (21) instr -> . jType
    (22) instr -> . syscall
    (23) instr -> . rType
    (24) instr -> . branch
    (50) breakpoint -> . BREAK NUMBER
    (51) breakpoint -> . BREAK
    (49) nop -> . NOP
    (43) move -> . MOVE REG
    (25) iType -> . LOADS_R REG LABEL
    (26) iType -> . PS_LOADS_A REG LABEL
    (27) iType -> . PS_LOADS_I REG CHAR
    (28) iType -> . PS_LOADS_I REG NUMBER
    (29) iType -> . PS_I_TYPE REG REG CHAR
    (30) iType -> . PS_I_TYPE REG REG NUMBER
    (31) iType -> . LOADS_R REG LPAREN REG RPAREN
    (32) iType -> . LOADS_R REG NUMBER LPAREN REG RPAREN
    (33) iType -> . LOADS_I REG CHAR
    (34) iType -> . LOADS_I REG NUMBER
    (35) iType -> . I_TYPE REG REG CHAR
    (36) iType -> . I_TYPE REG REG NUMBER
    (41) jType -> . J_FUNCTR REG
    (42) jType -> . J_FUNCT LABEL
    (48) syscall -> . SYSCALL
    (37) rType -> . PS_R_FUNCT2 REG REG
    (38) rType -> . PS_R_FUNCT3 REG REG REG
    (39) rType -> . R_FUNCT2 REG REG
    (40) rType -> . R_FUNCT3 REG REG REG
    (44) branch -> . PS_ZERO_BRANCH REG LABEL
    (45) branch -> . PS_BRANCH REG REG LABEL
    (46) branch -> . ZERO_BRANCH REG LABEL
    (47) branch -> . BRANCH REG REG LABEL
    GLOBL           reduce using rule 14 (instrs -> instr filetag .)
    INCLUDE         reduce using rule 14 (instrs -> instr filetag .)
    TEXT            reduce using rule 14 (instrs -> instr filetag .)
    DATA            reduce using rule 14 (instrs -> instr filetag .)
    $end            reduce using rule 14 (instrs -> instr filetag .)
    LABEL           shift and go to state 21
    BREAK           shift and go to state 30
    NOP             shift and go to state 31
    MOVE            shift and go to state 32
    LOADS_R         shift and go to state 33
    PS_LOADS_A      shift and go to state 34
    PS_LOADS_I      shift and go to state 35
    PS_I_TYPE       shift and go to state 36
    LOADS_I         shift and go to state 37
    I_TYPE          shift and go to state 38
    J_FUNCTR        shift and go to state 39
    J_FUNCT         shift and go to state 40
    SYSCALL         shift and go to state 41
    PS_R_FUNCT2     shift and go to state 42
    PS_R_FUNCT3     shift and go to state 43
    R_FUNCT2        shift and go to state 44
    R_FUNCT3        shift and go to state 45
    PS_ZERO_BRANCH  shift and go to state 46
    PS_BRANCH       shift and go to state 47
    ZERO_BRANCH     shift and go to state 48
    BRANCH          shift and go to state 49

    instr                          shift and go to state 20
    instrs                         shift and go to state 103
    label                          shift and go to state 19
    breakpoint                     shift and go to state 22
    nop                            shift and go to state 23
    move                           shift and go to state 24
    iType                          shift and go to state 25
    jType                          shift and go to state 26
    syscall                        shift and go to state 27
    rType                          shift and go to state 28
    branch                         shift and go to state 29

state 65

    (11) label -> LABEL COLON .
    BREAK           reduce using rule 11 (label -> LABEL COLON .)
    NOP             reduce using rule 11 (label -> LABEL COLON .)
    LABEL           reduce using rule 11 (label -> LABEL COLON .)
    MOVE            reduce using rule 11 (label -> LABEL COLON .)
    LOADS_R         reduce using rule 11 (label -> LABEL COLON .)
    PS_LOADS_A      reduce using rule 11 (label -> LABEL COLON .)
    PS_LOADS_I      reduce using rule 11 (label -> LABEL COLON .)
    PS_I_TYPE       reduce using rule 11 (label -> LABEL COLON .)
    LOADS_I         reduce using rule 11 (label -> LABEL COLON .)
    I_TYPE          reduce using rule 11 (label -> LABEL COLON .)
    J_FUNCTR        reduce using rule 11 (label -> LABEL COLON .)
    J_FUNCT         reduce using rule 11 (label -> LABEL COLON .)
    SYSCALL         reduce using rule 11 (label -> LABEL COLON .)
    PS_R_FUNCT2     reduce using rule 11 (label -> LABEL COLON .)
    PS_R_FUNCT3     reduce using rule 11 (label -> LABEL COLON .)
    R_FUNCT2        reduce using rule 11 (label -> LABEL COLON .)
    R_FUNCT3        reduce using rule 11 (label -> LABEL COLON .)
    PS_ZERO_BRANCH  reduce using rule 11 (label -> LABEL COLON .)
    PS_BRANCH       reduce using rule 11 (label -> LABEL COLON .)
    ZERO_BRANCH     reduce using rule 11 (label -> LABEL COLON .)
    BRANCH          reduce using rule 11 (label -> LABEL COLON .)
    LINE_MARKER     reduce using rule 11 (label -> LABEL COLON .)
    HALF            reduce using rule 11 (label -> LABEL COLON .)
    SPACE           reduce using rule 11 (label -> LABEL COLON .)
    ASCII           reduce using rule 11 (label -> LABEL COLON .)
    BYTE            reduce using rule 11 (label -> LABEL COLON .)
    WORD            reduce using rule 11 (label -> LABEL COLON .)
    ASCIIZ          reduce using rule 11 (label -> LABEL COLON .)


state 66

    (50) breakpoint -> BREAK NUMBER .
    LINE_MARKER     reduce using rule 50 (breakpoint -> BREAK NUMBER .)


state 67

    (43) move -> MOVE REG .
    LINE_MARKER     reduce using rule 43 (move -> MOVE REG .)


state 68

    (25) iType -> LOADS_R REG . LABEL
    (31) iType -> LOADS_R REG . LPAREN REG RPAREN
    (32) iType -> LOADS_R REG . NUMBER LPAREN REG RPAREN
    LABEL           shift and go to state 104
    LPAREN          shift and go to state 105
    NUMBER          shift and go to state 106


state 69

    (26) iType -> PS_LOADS_A REG . LABEL
    LABEL           shift and go to state 107


state 70

    (27) iType -> PS_LOADS_I REG . CHAR
    (28) iType -> PS_LOADS_I REG . NUMBER
    CHAR            shift and go to state 108
    NUMBER          shift and go to state 109


state 71

    (29) iType -> PS_I_TYPE REG . REG CHAR
    (30) iType -> PS_I_TYPE REG . REG NUMBER
    REG             shift and go to state 110


state 72

    (33) iType -> LOADS_I REG . CHAR
    (34) iType -> LOADS_I REG . NUMBER
    CHAR            shift and go to state 111
    NUMBER          shift and go to state 112


state 73

    (35) iType -> I_TYPE REG . REG CHAR
    (36) iType -> I_TYPE REG . REG NUMBER
    REG             shift and go to state 113


state 74

    (41) jType -> J_FUNCTR REG .
    LINE_MARKER     reduce using rule 41 (jType -> J_FUNCTR REG .)


state 75

    (42) jType -> J_FUNCT LABEL .
    LINE_MARKER     reduce using rule 42 (jType -> J_FUNCT LABEL .)


state 76

    (37) rType -> PS_R_FUNCT2 REG . REG
    REG             shift and go to state 114


state 77

    (38) rType -> PS_R_FUNCT3 REG . REG REG
    REG             shift and go to state 115


state 78

    (39) rType -> R_FUNCT2 REG . REG
    REG             shift and go to state 116


state 79

    (40) rType -> R_FUNCT3 REG . REG REG
    REG             shift and go to state 117


state 80

    (44) branch -> PS_ZERO_BRANCH REG . LABEL
    LABEL           shift and go to state 118


state 81

    (45) branch -> PS_BRANCH REG . REG LABEL
    REG             shift and go to state 119


state 82

    (46) branch -> ZERO_BRANCH REG . LABEL
    LABEL           shift and go to state 120


state 83

    (47) branch -> BRANCH REG . REG LABEL
    REG             shift and go to state 121


state 84
